--- a/index.html
+++ b/index.html
@@ -71,6 +71,38 @@
             <a href="" class="btn">Ver mais cursos</a>
         </section>
     </div>
+
+    <div class="wrapperContainer-dark2">
+        <section class="container" id="escola">
+            <img src="imagens/nossa-escola.png" alt="">
+            <h2>Nossa escola</h2>
+            <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de
+                tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de
+                software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um
+                ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para
+                ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de
+                tecnologia bem-sucedido.
+            </p>
+        </section>
+    </div>
+
+    <div class="wrapperContainer-light">
+        <section class="container" id="contatos">
+            <h2>contatos</h2>
+            <img src="imagens/map.png" alt="">
+            <address>
+                Av. da Liberdade, 1001 <br>
+                Tel.: +351 21 123 456 <br>
+                E-mail: contato@aprenser.com</address>
+        </section>
+
+    </div>
+
+    <div class="wrapperContainer-dark">
+        <footer>
+            Densenvolvido por Kauê Silva
+        </footer>
+    </div>
 </body>
 
 </html>
