--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/reset.css">
+
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Cursos Dev</title>
 </head>
 
@@ -29,7 +32,7 @@
 
     <div class="wrapperContainer-hero">
         <section class="container heroBanner">
-            <h1>O saber é o que transforma nosso SER</h1>
+            <h1>O saber é o que transforma nosso <span class="upper"> ser </span></h1>
             <a href="" class="btn">Saiba mais </a>
             <img src="imagens/HeroImage.png" alt="">
         </section>
@@ -89,7 +92,11 @@
     <div class="wrapperContainer-light">
         <section class="container" id="contatos">
             <h2>contatos</h2>
-            <img src="imagens/map.png" alt="">
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29253.671317716897!2d-46.68661857240376!3d-23.578895692388123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5744e0ebff5b%3A0x769bf4a32f914782!2sGoogle!5e0!3m2!1spt-BR!2sbr!4v1717452471012!5m2!1spt-BR!2sbr"
+                width="100%" height="525px" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <address>
                 Av. da Liberdade, 1001 <br>
                 Tel.: +351 21 123 456 <br>
