banner,btn(bannner), imagem e bg estilizados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/reset.css">
+
 
     <link rel="stylesheet" href="CSS/style.css">
     <title>Cursos Dev</title>
@@ -32,8 +32,10 @@
 
     <div class="wrapperContainer-hero">
         <section class="container heroBanner">
-            <h1>O saber é o que transforma nosso <span class="upper"> ser </span></h1>
-            <a href="" class="btn">Saiba mais </a>
+            <div class="header_content">
+                <h1>O saber é o que transforma nosso <span class="upper"> ser </span></h1>
+                <a href="" class="btn">Saiba mais </a>
+            </div>
             <img src="imagens/HeroImage.png" alt="">
         </section>
     </div>
@@ -109,6 +111,10 @@
         <footer>
             Densenvolvido por Kauê Silva
         </footer>
+    </div>
+
+    <div class="teste">
+        <a href="" class="teste_2">SAIBA MAIS </a>
     </div>
 </body>
 
