--- a/index.html
+++ b/index.html
@@ -78,15 +78,22 @@
     </div>
 
     <div class="wrapperContainer-dark2">
-        <section class="container" id="escola">
+        <section class="container escola" id="escola">
             <img src="imagens/nossa-escola.png" alt="">
-            <h2>Nossa escola</h2>
-            <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de
-                tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de
-                software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um
-                ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para
-                ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de
-                tecnologia bem-sucedido.
+            <div class="escola_content">
+
+                <h2 class="escola_tittle">Nossa escola</h2>
+                <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola
+                    de
+                    tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento
+                    de
+                    software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um
+                    ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias
+                    para
+                    ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional
+                    de
+                    tecnologia bem-sucedido.
+            </div>
             </p>
         </section>
     </div>
